# mini-soong

./: README.md  setup.cfg  setup.py  soong.pm
debian/: changelog  control
mini_soong/: main.py  model.py  parser.py  utils.py
mini_soong/builders/: __init__.py  cc.py  java.py
