[metadata]
name = mini-soong
version = 0
url = https://salsa.debian.org/android-tools-team/mini-soong
author = Andrej Shadura
author-email = andrewsh@debian.org
description = minimalist Soong build system reimplementation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.8
packages = find:
install_requires =
    python-debian
    pyparsing
    sh

[options.data_files]
#share/perl5/Debian/Debhelper/Buildsystem = soong.pm

[options.entry_points]
console_scripts =
    mini-soong = mini_soong.main:run
